# DxPortLib

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.txt  DxLibFunctionSupport.txt  DxPortLib.pc.in  Makefile.am  PORTING.EXAMPLE.DxLib.txt  PORTING.EXAMPLE.Luna.txt  PORTING.EXAMPLE.txt  README.txt  TODO.txt  autogen.sh  configure.ac
VisualC/: DxPortLib-VS2010.sln  DxPortLib-VS2010.vcxproj  DxPortLib-VS2010.vcxproj.filters
VisualC/test_draw/: test_draw-VS2010.vcxproj
extra/CSharp/: DxPortLibCSharp.cs  DxPortLibCSharp.csproj  DxPortLibCSharp.dll.config  DxPortLibCSharp.sln
html5/: CMakeLists.txt
include/: DPLBuildConfig.h  DPLCommon.h  DPLWinTypes.h  DxBuildConfig.h  DxDefines.h  DxLib.h  DxLib_c.h  DxPortLib.h  DxPortLib_c.h  Luna.h  LunaDx8.h  LunaMain.h  Makefile.am
src/: Audio.c  DXA.c  DxDXA.c  DxDraw.c  DxFile.c  DxFont.c  DxGraph.c  DxInternal.h  DxLib.cpp  DxLib_c.c  File.c  Font.c  Graph.c  Handle.c  Input.c  Luna.cpp  Luna3D.cpp  LunaCamera.cpp  LunaFile.cpp  LunaFontSprite.cpp  LunaInternal.h  LunaMath.cpp  LunaRand.cpp  LunaSound.cpp  LunaSprite.cpp  LunaTexture.cpp  LunaVecMath.cpp  Makefile.am  Memory.c  OpenGL_Draw.c  OpenGL_DxInternal.h  OpenGL_Main.c  OpenGL_Texture.c  PLAudio.c  PLFile.c  PLGLBuffers.c  PLGLFixedFunction.c  PLGLInternal.h  PLGLRender.c  PLGLShaders.c  (+21 more)
src/DPL/: DPLCppWrapper.cpp  DPLInternal.h  DPLList.c  DPLText.c  DPLWinINI.c
src/DxLib/: DxBlendModes.h  DxDXA.c  DxDraw.c  DxFile.c  DxFont.c  DxGraph.c  DxInternal.h  DxLib.cpp  DxLib_c.c
src/Luna/: Luna.cpp  Luna3D.cpp  LunaCamera.cpp  LunaChara.cpp  LunaFile.cpp  LunaFontSprite.cpp  LunaInput.cpp  LunaInternal.h  LunaMath.cpp  LunaRand.cpp  LunaSound.cpp  LunaSprite.cpp  LunaSurface.cpp  LunaTexture.cpp  LunaVecMath.cpp
src/PL/: PLAudio.c  PLFile.c  PLHandle.c  PLInput.c  PLInternal.h  PLMath.c  PLRNG.c  PLSurface.c  PLText.c  PLTextSnprintf.c  PLTextSscanf.c  PLText_CP932.c
src/PL/D3D9/: PLD3D9.c  PLD3D9Buffers.c  PLD3D9FixedFunction.c  PLD3D9Internal.h  PLD3D9Render.c  PLD3D9Shaders.c  PLD3D9Texture.c
src/PL/GL/: PLGL.c  PLGLBuffers.c  PLGLFixedFunction.c  PLGLInternal.h  PLGLRender.c  PLGLShaders.c  PLGLTexture.c
src/PL/SDL2/: PLSDL2File.c  PLSDL2GL.c  PLSDL2Internal.h  PLSDL2Main.c  PLSDL2Memory.c  PLSDL2SaveScreen.c  PLSDL2System.c  PLSDL2Window.c
test/: Makefile.am  porting_example.cpp  test_blend.cpp  test_draw.cpp  test_font.cpp
