
lib_LTLIBRARIES = libDxPortLib.la

libDxPortLib_la_SOURCES =	\
	Audio.c			\
	DXA.c			\
	DxInternal.h		\
	DxLib.cpp		\
	DxLib_c.c		\
	File.c			\
	Font.c			\
	Graph.c			\
	Handle.c		\
	Input.c			\
	Memory.c		\
	OpenGL_Draw.c		\
	OpenGL_Main.c		\
	OpenGL_DxInternal.h	\
	OpenGL_Texture.c	\
	RNG.c			\
	SDL2Render_Draw.c	\
	SDL2Render_DxInternal.h	\
	SDL2Render_Texture.c	\
	Text.c			\
	Text_CP932.c		\
	Window.c

libDxPortLib_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
