
lib_LTLIBRARIES = libDxPortLib.la

libDxPortLib_la_SOURCES =	\
	DxDraw.c \
	DxDXA.c \
	DxFile.c \
	DxFont.c \
	DxGraph.c \
	DxInternal.h \
	DxLib.cpp \
	DxLib_c.c \
	Luna.cpp \
	Luna3D.cpp \
	LunaCamera.cpp \
	LunaFile.cpp \
	LunaFontSprite.cpp \
	LunaInput.cpp \
	LunaMath.cpp \
	LunaRand.cpp \
	LunaSound.cpp \
	LunaSprite.cpp \
	LunaTexture.cpp \
	LunaVecMath.cpp \
	PLAudio.c \
	PLFile.c \
	PLGLBuffers.c \
	PLGLInternal.h \
	PLGLRender.c \
	PLGLTexture.c \
	PLGLShaders.c \
	PLHandle.c \
	PLInput.c \
	PLInternal.h \
	PLMath.c \
	PLRNG.c \
	PLSDL2File.c \
	PLSDL2GL.c \
	PLSDL2Internal.h \
	PLSDL2Main.c \
	PLSDL2Window.c \
	PLSDL2Memory.c \
	PLSDL2SaveScreen.c \
	PLSurface.c \
	PLText.c \
	PLText_CP932.c

libDxPortLib_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
