
lib_LTLIBRARIES = libDxPortLib.la

libDxPortLib_la_SOURCES =	\
  DPL/DPLCppWrapper.cpp \
  DPL/DPLList.c \
  DPL/DPLText.c \
  DPL/DPLInternal.h \
  DPL/DPLWinINI.c \
	DxLib/DxDraw.c \
	DxLib/DxDXA.c \
	DxLib/DxFile.c \
	DxLib/DxFont.c \
	DxLib/DxGraph.c \
	DxLib/DxInternal.h \
	DxLib/DxLib.cpp \
	DxLib/DxLib_c.c \
	Luna/Luna.cpp \
	Luna/Luna3D.cpp \
	Luna/LunaCamera.cpp \
	Luna/LunaChara.cpp \
	Luna/LunaFile.cpp \
	Luna/LunaFontSprite.cpp \
	Luna/LunaInput.cpp \
	Luna/LunaMath.cpp \
	Luna/LunaRand.cpp \
	Luna/LunaSound.cpp \
	Luna/LunaSprite.cpp \
  Luna/LunaSurface.cpp \
	Luna/LunaTexture.cpp \
	Luna/LunaVecMath.cpp \
	PL/PLAudio.c \
	PL/PLFile.c \
	PL/PLHandle.c \
	PL/PLInput.c \
	PL/PLInternal.h \
	PL/PLMath.c \
	PL/PLRNG.c \
	PL/D3D9/PLD3D9.c \
	PL/D3D9/PLD3D9Buffers.c \
	PL/D3D9/PLD3D9FixedFunction.c \
	PL/D3D9/PLD3D9Internal.h \
	PL/D3D9/PLD3D9Render.c \
	PL/D3D9/PLD3D9Texture.c \
	PL/D3D9/PLD3D9Shaders.c \
	PL/GL/PLGL.c \
	PL/GL/PLGLBuffers.c \
	PL/GL/PLGLFixedFunction.c \
	PL/GL/PLGLInternal.h \
	PL/GL/PLGLRender.c \
	PL/GL/PLGLTexture.c \
	PL/GL/PLGLShaders.c \
	PL/SDL2/PLSDL2File.c \
	PL/SDL2/PLSDL2GL.c \
	PL/SDL2/PLSDL2Internal.h \
	PL/SDL2/PLSDL2Main.c \
	PL/SDL2/PLSDL2Window.c \
	PL/SDL2/PLSDL2Memory.c \
	PL/SDL2/PLSDL2SaveScreen.c \
	PL/SDL2/PLSDL2System.c \
	PL/PLSurface.c \
	PL/PLText.c \
	PL/PLTextSnprintf.c \
	PL/PLTextSscanf.c \
	PL/PLText_CP932.c

libDxPortLib_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
