
noinst_PROGRAMS =	\
	test_draw	\
	test_blend	\
	test_font

test_draw_SOURCES =	\
	test_draw.cpp
test_draw_LDADD = \
	../src/libDxPortLib.la \
	-lSDL2main

test_blend_SOURCES =	\
	test_blend.cpp
test_blend_LDADD = \
	../src/libDxPortLib.la \
	-lSDL2main

test_font_SOURCES =	\
	test_font.cpp
test_font_LDADD = \
	../src/libDxPortLib.la \
	-lSDL2main
