
noinst_PROGRAMS =	\
	porting_example	\
	test_draw	\
	test_blend	\
	test_font

porting_example_SOURCES =	\
	porting_example.cpp
porting_example_LDADD = \
	../src/libDxPortLib.la \
	-lSDL2main

test_draw_SOURCES =	\
	test_draw.cpp
test_draw_LDADD = \
	../src/libDxPortLib.la \
	-lSDL2main

test_blend_SOURCES =	\
	test_blend.cpp
test_blend_LDADD = \
	../src/libDxPortLib.la \
	-lSDL2main

test_font_SOURCES =	\
	test_font.cpp
test_font_LDADD = \
	../src/libDxPortLib.la \
	-lSDL2main

